--- a/index.html
+++ b/index.html
@@ -1820,14 +1820,14 @@
                                 <img src="assets/images/3d/Saly-31.png" alt="contact-img">
                             </div>
                             <div class="title-area">
-                                <h4 class="title">Naem Azam</h4>
+                                <h4 class="title">Sam Sapiolh4>
                                 <span>Open-source enthusiast</span>
                             </div>
                             <div class="description">
                                 <p>I am available for freelance work. Connect with me via and call in to my account.
                                 </p>
-                                <span class="phone">Phone: <a href="tel:01941043264">+15184682511</a></span>
-                                <span class="mail">Email: <a href="mailto:donottroublethetrouble@protonmail.com">naemazam@protonmail.com</a></span>
+                                <span class="phone">Phone: <a href="tel:01941043264">+938493402</a></span>
+                                <span class="mail">Email: <a href="mailto:donottroublethetrouble@protonmail.com">donottroublethetrouble@protonmail.com</a></span>
                             </div>
                             <div class="social-area">
                                 <div class="name">FIND WITH ME</div>
